--- a/deploy/docker-compose/docker-compose.yml
+++ b/deploy/docker-compose/docker-compose.yml
@@ -14,42 +14,55 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
 
   service1:
-    image: istio_demo/service1:v1
+    image: rabbitmq_demo/service1:v1
     build:
       context: .
-      dockerfile: ../services/service1/Dockerfile
+      dockerfile: ../../services/service1/Dockerfile
     ports:
       - 5000:5000
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - Service2Uri=http://service2:5000
       - Service3Uri=http://service3:5000
+    env_file: 
+      - ./rabbitmq.env
     volumes:
       - ~/.vsdbg:/remote_debugger:rw
 
   service2:
-    image: istio_demo/service2:v1
+    image: rabbitmq_demo/service2:v1
     build:
       context: .
-      dockerfile: ../services/Service2/Dockerfile
+      dockerfile: ../../services/Service2/Dockerfile
     ports:
       - 5001:5000
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+    env_file: 
+      - ./rabbitmq.env
     volumes:
       - ~/.vsdbg:/remote_debugger:rw
       
   service3:
-    image: istio_demo/service3:v1
+    image: rabbitmq_demo/service3:v1
     build:
       context: .
-      dockerfile: ../services/Service3/Dockerfile
+      dockerfile: ../../services/Service3/Dockerfile
     ports:
       - 5002:5000
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Development      
+    env_file: 
+      - ./rabbitmq.env
     volumes:
       - ~/.vsdbg:/remote_debugger:rw
   
   rabbitmq:
-    
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - 5672:5672
+      - 15672:15672
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest        
