--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -6,12 +6,9 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
-  tls:
-  - secretName: ingress-tls-secret
-    hosts:
-      - "localhost"
   rules:
-    - http:
+    - host: rabbitmq-demo.com
+      http:
         paths:
         - path: /service1/(.*)
           pathType: Prefix
