--- a/deploy/docker-compose/nginx.conf
+++ b/deploy/docker-compose/nginx.conf
@@ -4,14 +4,14 @@ events {
 
 http {
     server {
-        location /service1 {
-            proxy_pass http://service1:5000/;
-            rewrite ^/service1/(.*)$ /$1 break;
+        location /subscriber {
+            proxy_pass http://subscriber:5000/;
+            rewrite ^/subscriber/(.*)$ /$1 break;
         }
 
-        location /service2 {
-            proxy_pass http://service2:5000/;
-            rewrite ^/service2/(.*)$ /$1 break;
+        location /publisher {
+            proxy_pass http://publisher:5000/;
+            rewrite ^/publisher/(.*)$ /$1 break;
         }
     }
 }
