--- a/kubernetes/publisher.yaml
+++ b/kubernetes/publisher.yaml
@@ -21,6 +21,17 @@ spec:
             cpu: "500m"
         ports:
         - containerPort: 5000
+        env:
+        - name: RabbitMq__UserName
+          valueFrom:
+            secretKeyRef:
+              name: rabbitmq-default-user
+              key: username
+        - name: RabbitMq__Password
+          valueFrom:
+            secretKeyRef:
+              name: rabbitmq-default-user
+              key: password
         envFrom:
         - configMapRef:
             name: rabbitmq-config
